# music

./: .env.example  .gitignore  README.md  Readme.md  backend_run.sh  generate_mp3.sh  generate_mp3_embeddings.sh  pyproject.toml  queue_run.sh  requirements.txt  start.sample.sh  test_db.sh  update.sh
.github/: electron_builder.yaml
app/: __init__.py  apiv1.py  app.py  config.py  config.py.orig  extensions.py  models.py  run_app.py  worker.py
client/: README.md
diffrhythm/: requirements.txt
g2p/: g2p_generation.py
infer/: __init__.py  infer.py  infer_utils.py
infra/: README.md
lyrics/: __init__.py  lyrics.py
model/: cfm.py  modules.py
music_app/: README.md  build.yaml  datbase.sh  diskrot.db-wal  index.html  package-lock.json  package.json  pubspec.yaml  swagger.js  tsconfig.json  vite.main.config.mjs  vite.preload.config.mjs.timestamp-1742140899953-0291a13929804.mjs
music_app_old/: README.md  forge.config.js  package-lock.json  package.json  swagger-output.json
music_backend/: .env.example  README.md  apiv1.py  app.py  config.py  env.example.bat  extensions.py  main.py  models.py  music_backend.py  requirements.txt
music_database/: diskrot.db
music_frontend/: README.md  index.html  package-lock.json
music_inferencing/: .env.example  DOCKERFILE  README.md  apiv1.py  background_thread.py  config.py  docker-compose.yaml  env.example.bat  extensions.py  main.py  models.py  music_queue.py  package-lock.json  requirements.txt  runpod_start.sh  s3_storage.py
music_networking/: README.md  package-lock.json  package.json  restart.sh
server/: app.py  (+1 more)
(+263 files in other folders)
