[project]
name = "diffrhythm"
version = "0.0.1"
description = "Music generation"
authors = [
    {name = "Alex Ayers",email = "me@alexayers.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate (==1.4.0)",
    "torchdiffeq(==0.2.5)",
    "torchaudio(==2.6.0)",
    "x-transformers(==2.1.2)",
    "transformers(==4.49.0)",
    "librosa(==0.10.2.post1)",
    "pyarrow(==19.0.1)",
    "pandas(==2.2.3)",
    "pylance(==0.23.2)",
    "ema-pytorch(==0.7.7)",
    "prefigure(==0.0.10)",
    "bitsandbytes(==0.45.3)",
    "muq(==0.1.0)",
    "mutagen(==1.47.0)",
    "pyopenjtalk(==0.4.0)",
    "pykakasi(==2.3.0)",
    "jieba(==0.42.1)",
    "cn2an(==0.5.23)",
    "onnxruntime(==1.20.1)",
    "Unidecode(==1.3.8)",
    "phonemizer(==3.3.0)",
    "LangSegment(==0.3.5)",
    "Flask(==3.1.0)",
    "penai(==1.65.4)",
    "flask-restx(==1.3.0)",
    "Flask-SQLAlchemy(==3.1.1)",
    "Flask-Migrate(==4.1.0)",
    "redis(==5.2.1)",
    "celery(==5.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
